[package]
name = "net"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"
publish = false
autotests = false  # Inhibit lookup for tests/*.rs without [[test]] sections

[lib]
name = "net"
path = "lib.rs"
test = false
doctest = false

[dependencies]
async-tungstenite = { version = "0.9.3", features = ["tokio-rustls"] }
base64 = "0.10.1"
brotli = "3"
bytes = "0.4"
content-security-policy = { version = "0.4.0", features = ["serde"] }
cookie_rs = { package = "cookie", version = "0.11" }
crossbeam-channel = "0.4"
ct-logs = "0.7"
data-url = "0.1.0"
devtools_traits = { path = "../devtools_traits" }
embedder_traits = { path = "../embedder_traits" }
flate2 = "1"
futures01 = { version = "0.1", package = "futures" }
futures03 = { version = "0.3", package = "futures" }
futures-util = { version = "0.3.7", features = ["compat", "io-compat"]}
headers = "0.2"
http = "0.1"
hyper = "0.12"
hyper_serde = "0.11"
immeta = "0.4"
ipc-channel = "0.14"
lazy_static = "1"
libflate = "0.1"
log = "0.4"
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = "0.1"
mime = "0.3"
mime_guess = "2.0.0"
msg = { path = "../msg" }
net_traits = { path = "../net_traits" }
percent-encoding = "2.0"
pixels = { path = "../pixels" }
profile_traits = { path = "../profile_traits" }
rayon = "1"
ring = "0.16.15"
rustls = { version = "0.18.1", features = ["dangerous_configuration"] }
serde = "1.0"
serde_json = "1.0"
servo_allocator = { path = "../allocator" }
servo_arc = { path = "../servo_arc" }
servo_config = { path = "../config" }
servo_url = { path = "../url" }
time = "0.1.17"
tokio1 = { version = "0.1", package = "tokio" }
tokio2 = { version = "0.2", package = "tokio", features = ["sync", "macros", "rt-threaded"] }
tokio-compat = "0.1.6"
tokio-rustls = "0.14.1"
tokio-util = { version = "0.3.1", features = ["compat"] }
tungstenite = { version = "0.11", default-features = false }
url = "2.0"
uuid = { version = "0.8", features = ["v4"] }
webpki = "0.21"
webpki-roots = "0.20"
webrender_api = { git = "https://github.com/servo/webrender" }

[dev-dependencies]
std_test_override = { path = "../std_test_override" }

[[test]]
name = "main"
path = "tests/main.rs"
